--- a/Eieruhr/index.html
+++ b/Eieruhr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,20 +27,33 @@
     </style>
 
     <script>
-      function startTimer() {
-        let startTime = new Date().getTime();
-        let fiveMinutes = 1000 * 60 * 5;
-        let endTime = startTime + fiveMinutes;
+      let alarm = new Audio('alarm.mp3');
+      let timerStarted = false;
 
-        setIntervall(function () {
-          let timeLeft = endTime - new Date().getTime();
-          let minutes = timeLeft / (1000 * 60);
-          minutes = Math.floor(minutes);
-          let seconds = (timeleft / 1000) % 60;
-          seconds = Math.round(seconds);
-          let text = '0' + minutes + ' : ' + seconds;
-          timer.innerHTML = text;
-        }, 1000);
+      function startTimer() {
+        if (!timerStarted) {
+          let startTime = new Date().getTime();
+          let fiveMinutes = 1000 * 60 * 5;
+          let endTime = startTime + fiveMinutes;
+
+          setIntervall(function () {
+            let timeLeft = endTime - new Date().getTime();
+
+            if (timeLeft > 0) {
+              let minutes = timeLeft / (1000 * 60);
+              minutes = Math.floor(minutes);
+              let seconds = (timeleft / 1000) % 60;
+              seconds = Math.round(seconds);
+              seconds = ('0' + seconds).slice(-2);
+              let text = '0' + minutes + ' : ' + seconds;
+              timer.innerHTML = text;
+            } else {
+              alarm.play();
+              innerHTML = '00:00';
+            }
+          }, 1000);
+          timerStarted = true;
+        }
       }
     </script>
   </head>
