Erster Button fertig

--- a/Button/index.html
+++ b/Button/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>5 Button Desgins</title>
+    <link rel="stylesheet" href="button.css" />
   </head>
   <body>
     <div class="button-behaelter">
-      <button>Einfacher Button</button>
-      <button>Umrandungsbutton</button>
-      <button>Pillenbutton</button>
-      <button>Textbutton</button>
-      <button>&#9825;</button>
+      <button class="button einfacher-button">Einfacher Button</button>
+      <button class="button umrandungs-button">Umrandungsbutton</button>
+      <button class="button pillen-button">Pillenbutton</button>
+      <button class="button text-button">Textbutton</button>
+      <button class="button icon-button">&#9825;</button>
     </div>
   </body>
 </html>
