--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slideshow</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="slideshow">
+      <div class="slide">
+        <img
+          src="bilder/bild1.jpg"
+          alt="Eine Familie am Meer"
+          class="slide-bild"
+        />
+      </div>
+    </div>
+  </body>
 </html>
