alle 3 slide erstellt

--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -15,6 +15,41 @@
           alt="Eine Familie am Meer"
           class="slide-bild"
         />
+        <div class="slide-textbereich">
+          <h3 clss="slide-ueberschrift">Genießen Sie das Meer</h3>
+          <p clas="slide-beschreibung">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+            cumque soluta voluptates rerum libero ullam itaque voluptatum!
+          </p>
+        </div>
+      </div>
+      <div class="slide">
+        <img
+          src="bilder/bild2.jpg"
+          alt="Ein Boot im Sonnenuntergang"
+          class="slide-bild"
+        />
+        <div class="slide-textbereich">
+          <h3 clss="slide-ueberschrift">Genießen Sie das Meer</h3>
+          <p clas="slide-beschreibung">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+            cumque soluta voluptates rerum libero ullam itaque voluptatum!
+          </p>
+        </div>
+      </div>
+      <div class="slide">
+        <img
+          src="bilder/bild3.jpg"
+          alt="Eine Frau am Pool"
+          class="slide-bild"
+        />
+        <div class="slide-textbereich">
+          <h3 clss="slide-ueberschrift">Genießen Sie das Meer</h3>
+          <p clas="slide-beschreibung">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo
+            cumque soluta voluptates rerum libero ullam itaque voluptatum!
+          </p>
+        </div>
       </div>
     </div>
   </body>
