--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -51,6 +51,8 @@
           </p>
         </div>
       </div>
+      <a class="pfeil pfeil-links"><span> &#10094;</span></a>
+      <a class="pfeil pfeil-rechts"><span>&#10095;</span></a>
     </div>
   </body>
 </html>
