--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -53,6 +53,11 @@
       </div>
       <a class="pfeil pfeil-links"><span> &#10094;</span></a>
       <a class="pfeil pfeil-rechts"><span>&#10095;</span></a>
+      <ol class="indikatorenliste">
+        <li class="indikator">&#8226;</li>
+        <li class="indikator">&#8226;</li>
+        <li class="indikator">&#8226;</li>
+      </ol>
     </div>
   </body>
 </html>
