Pfeil funktion erstellt JavaScript

--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -51,8 +51,12 @@
           </p>
         </div>
       </div>
-      <a class="pfeil pfeil-links"><span> &#10094;</span></a>
-      <a class="pfeil pfeil-rechts"><span>&#10095;</span></a>
+      <a class="pfeil pfeil-links" onclick="umschalten(-1)"
+        ><span> &#10094;</span></a
+      >
+      <a class="pfeil pfeil-rechts" onclick="umschalten(1)"
+        ><span>&#10095;</span></a
+      >
       <ol class="indikatorenliste">
         <li class="indikator">&#8226;</li>
         <li class="indikator">&#8226;</li>
