Punkt funktion erstellt JavaScript

--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -58,9 +58,9 @@
         ><span>&#10095;</span></a
       >
       <ol class="indikatorenliste">
-        <li class="indikator">&#8226;</li>
-        <li class="indikator">&#8226;</li>
-        <li class="indikator">&#8226;</li>
+        <li class="indikator" onclick="springeZuEintrag(0)">&#8226;</li>
+        <li class="indikator" onclick="springeZuEintrag(1)">&#8226;</li>
+        <li class="indikator" onclick="springeZuEintrag(2)">&#8226;</li>
       </ol>
     </div>
     <script src="slideshow.js"></script>
