--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -21,12 +21,13 @@
     <section class="start"></section>
     <h1>Ei Gude auf Thailanderleben</h1>
     <br />
+    <h2>Endlich kann der Alltag einpacken!</h2>
+    <br>
     <div class="einleitung">
-        <h2>Endlich kann der Alltag einpacken!</h2>
-        Im Mai 2019 bin ich zum ersten Mal in meinem Leben geflogen und dann auch gleich ein Langstreckenflug nach Thailand. Es kam, wie es kommen musste. Ich habe mich nicht nur in meine jetzige Frau verliebt. Nein, sogar in das für mich wunderschöne Land und
+        <p>Im Mai 2019 bin ich zum ersten Mal in meinem Leben geflogen und dann auch gleich ein Langstreckenflug nach Thailand. Es kam, wie es kommen musste. Ich habe mich nicht nur in meine jetzige Frau verliebt. Nein, sogar in das für mich wunderschöne Land und
         ich habe noch nicht alles von Thailand gesehen.<br><br> Was ich aber noch machen werde und Du kannst mich auf meiner spannenden Reise begleiten. Wenn Du mit mir Thailanderleben möchtest, dann kannst Du mit auf diversen Kanälen wie YouTube,
         Facebook, Instagram oder Twitter folgen und meine Bilder und Videos genießen.<br><br> Was erwartet Dich auf der Thailanderleben Homepage?<br><br> Meine Homepage wird nach und nach mit wichtigen sowie nützlichen Informationen und News gefüllt,
-        die für alle Thailand Liebhaber und noch nicht in Thailand waren, aber dort hin Reisen möchten geeignet sind.<br><br> Welche Ausrüstung ich zur Produktion meiner Videos verwende, erfährst Du natürlich auch.
+        die für alle Thailand Liebhaber und noch nicht in Thailand waren, aber dort hin Reisen möchten geeignet sind.<br><br> Welche Ausrüstung ich zur Produktion meiner Videos verwende, erfährst Du natürlich auch.</p>
     </div>
     <nav>
         <div class="nav-logo"></div>
@@ -65,6 +66,10 @@
 
         </div>
     </nav>
+    <div class="wisebanner">
+      <a href="https://wise.prf.hn/click/camref:1011liuZJ/creativeref:1101l34198" rel="sponsored"><img src="https://wise-creative.prf.hn/source/camref:1011liuZJ/creativeref:1101l34198" width="728"
+        border="0" /></a>
+    </div>
     <div class="thailiebe">
         <p>ผมรักเมืองไทย <br>pomm ragg müang<br> thai Ich liebe Thailand</p>
     </div>
