--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -6,7 +6,7 @@
     <title>Personal Trainer Max Mustermann</title>
     <link
       rel="stylesheet"
-      href="fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.css"
+      href="fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="dialoge.css" />
@@ -134,7 +134,7 @@
     <div id="body-overlay"></div>
     <div class="dialog" id="loslegen-dialog">
       <a href="#" role="button" class="dialog-schliessen-button">
-        <i class="fas fa-times"></i>
+        <i class="fa css fa-times"></i>
       </a>
       <h3>Jetzt Registrieren!</h3>
       <p>
@@ -149,7 +149,6 @@
         <input type="submit" placeholder="Loslegen" class="eingabefeld" />
       </form>
     </div>
-
     <script src="dialoge.js"></script>
   </body>
 </html>
