--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -75,8 +75,8 @@
     </div>
 
     <div class="amexbanner">
-      <center>
-      <!-- Beginn https://www.financeads.net/-Code --><a href="https://www.financeads.net/tc.php?t=49902C251547754B" target="_blank"><img src=
+      
+      <center><a href="https://www.financeads.net/tc.php?t=49902C251547754B" target="_blank"><img src=
       "https://www.financeads.net/tb.php?t=49902V251547754B&amp;https=1" alt="American Express Payback Card" border="0" width="728" height="90" /></a><!-- Ende https://www.financeads.net/-Code -->
       </center>
     </div>
