alle Dateien erstellt und toast

--- a/Toast/Snackbars/index.html
+++ b/Toast/Snackbars/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <button type="button">Toasts anzeigen</button>
+
+    <div class="toast-behaelter">
+      <div class="toast">Das ist eine unglaublich wichtige Nachricht!</div>
+    </div>
   </body>
 </html>
