Links Nav bar öffnen in neuem tab

--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -17,7 +17,45 @@
 </head>
 
 <body>
+<header>
+      <nav>
+        <div class="nav-logo"></div>
 
+        <div class="list_container">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <a href="https://www.thailanderleben.com/thailanderleben/reisennachthailand/" target="_blank">Reisen nach Thailand</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.thailanderleben.com/thailanderleben/die-erste-reise/" target="_blank"
+              >Die erste Reise</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.thailanderleben.com/thailanderleben/eine-reise-hat-nicht-gereicht/" target="_blank"
+              >Eine Reise hat nicht gereicht</a
+            >
+          </li>
+          <li>
+            <a href="https://www.thailanderleben.com/erfahrungen-tipps/" target="_blank"
+              >Erfahrungen + Tipss</a
+            >
+            <li> <a href="https://www.thailanderleben.com/erfahrungen-tipps/die-beste-reisezeit-und-klima-in-thailand/" target="_blank">Die beste Reisezeit und Klima in Thailand</a></li>
+                </li>
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+            </ul>
+
+        </div>
+    </nav>
+  </header>
     <section class="start"></section>
     <h1>Ei Gude auf Thailanderleben</h1>
     <br />
@@ -29,45 +67,10 @@
         Facebook, Instagram oder Twitter folgen und meine Bilder und Videos genießen.<br><br> Was erwartet Dich auf der Thailanderleben Homepage?<br><br> Meine Homepage wird nach und nach mit wichtigen sowie nützlichen Informationen und News gefüllt,
         die für alle Thailand Liebhaber und noch nicht in Thailand waren, aber dort hin Reisen möchten geeignet sind.<br><br> Welche Ausrüstung ich zur Produktion meiner Videos verwende, erfährst Du natürlich auch.</p>
     </div>
-    <nav>
-        <div class="nav-logo"></div>
-
-        <div class="list_container">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>
-                    <a href="https://www.thailanderleben.com/thailanderleben/reisennachthailand/">Reisen nach Thailand</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.thailanderleben.com/thailanderleben/die-erste-reise/"
-              >Die erste Reise</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.thailanderleben.com/thailanderleben/eine-reise-hat-nicht-gereicht/"
-              >Eine Reise hat nicht gereicht</a
-            >
-          </li>
-          <li>
-            <a href="https://www.thailanderleben.com/erfahrungen-tipps/"
-              >Erfahrungen + Tipss</a
-            >
-            <li> <a href="https://www.thailanderleben.com/erfahrungen-tipps/die-beste-reisezeit-und-klima-in-thailand/">Die beste Reisezeit und Klima in Thailand</a></li>
-                </li>
-                <a href="#" class="toggle-button">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-            </ul>
-
-        </div>
-    </nav>
+    
+    
     <div class="wisebanner">
-      <a href="https://wise.prf.hn/click/camref:1011liuZJ/creativeref:1101l34198" rel="sponsored"><img src="https://wise-creative.prf.hn/source/camref:1011liuZJ/creativeref:1101l34198" width="728"
+      <a href="https://wise.prf.hn/click/camref:1011liuZJ/creativeref:1101l34198"  rel="sponsored" target="_blank"><img src="https://wise-creative.prf.hn/source/camref:1011liuZJ/creativeref:1101l34198" width="728"
         border="0" /></a>
     </div>
     <div class="thailiebe">
