--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -151,9 +151,33 @@
             alt="American Express Payback Card"
             border="0"
             width="728"
-            height="90" /></a
-        ><!-- Ende https://www.financeads.net/-Code -->
+            height="90"
+        /></a>
       </center>
+    </div>
+    <div class="merch">
+      <h3>Happy Thailanderleben Fans</h3>
+      <p>
+        Für alle Thailanderleben Fans gibt es jetzt Merchandising. Klicke auf
+        dem Bottom und du wirst zum Shop weitergeleitet.<br />
+        Natürlich gibt es auch Shirts mit anderen Designs hier ist für jeden was
+        dabei!<br />
+        Viel Spaß beim Shoppen!
+      </p>
+    </div>
+    <div class="socialMedia">
+      <a href="https://facebook.com" target="_Blank">
+        <i class="fas fa-facebook nav-icon"></i
+      ></a>
+      <a href="https://instagram.com" target="_Blank" class="nav-link"
+        ><i class="fab fa-instagram-square"></i
+      ></a>
+      <a href="https://facebook.com" target="_Blank" class="nav-link"
+        ><i class="fab fa-facebook"></i
+      ></a>
+      <a href="httpsr://twitter.com" target="_Blank" class="nav-link"
+        ><i class="fab fa-twitter"></i
+      ></a>
     </div>
   </body>
 </html>
