--- a/CSS Grundlagen/css box/index.html
+++ b/CSS Grundlagen/css box/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Box Model</title>
+    <title>Das CSS Box Modell</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Eine große h1 Überschrift</h1>
+    <h2>Eine kleinere h2 Überschrift</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt earum,
+      necessitatibus dolorum reiciendis vel eligendi voluptates accusamus cumque
+      consectetur, inventore deserunt odio quo debitis? Cumque sed aut
+      dignissimos odit architecto.
+    </p>
+    <div>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta sed
+        recusandae maxime aperiam officiis, aspernatur est ut, non quidem
+        aliquam quas at dolorem mollitia beatae nesciunt. Ipsam obcaecati
+        voluptatum eius.
+      </p>
+      <p>Lorem ipsum dolor sit met.</p>
+    </div>
+    <ul>
+      <li>Erster Einttrag</li>
+      <li>Zweiter Einttrag</li>
+      <li>Dritter Einttrag</li>
+      <li>Noch ein Einttrag</li>
+    </ul>
+  </body>
 </html>
