--- a/CSS Grundlagen/css umrandungen/index.html
+++ b/CSS Grundlagen/css umrandungen/index.html
@@ -11,8 +11,7 @@
     <h1>Ich bin eine große Überschrift</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, sed
-      quibusdam minus vero aliquam amet blanditiis quia voluptatem vel! Dolore
-      ut, nam tenetur eaque alias quod. Obcaecati ex officia laborum.
+      quibusdam minus vero aliquam amet blanditiis quia voluptatem vel!
     </p>
   </body>
 </html>
