css texte html fertig erstellt

--- a/CSS Grundlagen/css texte/index.html
+++ b/CSS Grundlagen/css texte/index.html
@@ -17,5 +17,11 @@
       vel earum animi aspernatur molestiae repellendus facere voluptates sit
       necessitatibus atque?
     </p>
+    <div class="text-container">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia fugiat
+      mollitia necessitatibus at eveniet vel, autem, libero aspernatur rem
+      beatae repudiandae possimus, deserunt iste alias nobis blanditiis natus
+      quas voluptatem?
+    </div>
   </body>
 </html>
