--- a/CSS Grundlagen/css texte/index.html
+++ b/CSS Grundlagen/css texte/index.html
@@ -9,19 +9,28 @@
   </head>
   <body>
     <h1>Ich bin eine große Überschrift</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum
+      dolor sit amet, consectetur adipisicing elit.
+    </p>
     <h2>Eine kleinere h2 Überschrift</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, amet
       doloribus voluptas iusto ratione recusandae. Quas omnis, perspiciatis, sed
       vel earum animi aspernatur molestiae repellendus facere voluptates sit
-      necessitatibus atque?
+      necessitatibus atque? Lorem ipsum dolor sit amet, consectetur adipisicing
+      elit. Hallo Lorem ipsum dolor sit amet consectetur adipisicing elit. Hallo
+      Bla bla bla Laborum, amet doloribus voluptas iusto ratione recusandae.
+      Quas omnis, perspiciatis, sed vel earum animi aspernatur molestiae
+      repellendus facere voluptates sit necessitatibus atque? Lorem ipsum dolor
+      sit amet, consectetur adipisicing elit.
     </p>
     <div class="text-container">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia fugiat
       mollitia necessitatibus at eveniet vel, autem, libero aspernatur rem
-      beatae repudiandae possimus, deserunt iste alias nobis blanditiis natus
-      quas voluptatem?
+      beatae repudiandae possimus,ein wirklich
+      sssssseeeeeeeeeeeeeeeeeeeeehhhhhhhhhhhhhhhhhrrrrrrrrrr lange Wort deserunt
+      iste alias nobis blanditiis natus quas voluptatem?
     </div>
   </body>
 </html>
