Youtube Video eingebettet

--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -130,8 +130,6 @@
         target="_blank"
         ><img
           src="https://wise-creative.prf.hn/source/camref:1011liuZJ/creativeref:1101l34198"
-          width="728"
-          border="0"
       /></a>
     </div>
     <div class="thailiebe">
@@ -142,21 +140,30 @@
     </div>
 
     <div class="amexbanner">
-      <center>
-        <a
-          href="https://www.financeads.net/tc.php?t=49902C251547754B"
-          target="_blank"
-          ><img
-            src="https://www.financeads.net/tb.php?t=49902V251547754B&amp;https=1"
-            alt="American Express Payback Card"
-            border="0"
-            width="728"
-            height="90"
-        /></a>
-      </center>
+      <a
+        href="https://www.financeads.net/tc.php?t=49902C251547754B"
+        target="_blank"
+        ><img
+          src="https://www.financeads.net/tb.php?t=49902V251547754B&amp;https=1"
+          alt="American Express Payback Card"
+      /></a>
     </div>
+    <br />
+    <div class="iframe-behaelter-behaelter">
+      <div class="iframe-behaelter">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/JLPzm3YLEeg"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <h3>Happy Thailanderleben Fans</h3>
     <div class="merch">
-      <h3>Happy Thailanderleben Fans</h3>
       <p>
         Für alle Thailanderleben Fans gibt es jetzt Merchandising. Klicke auf
         dem Bottom und du wirst zum Shop weitergeleitet.<br />
