--- a/Taschenrechner app/index.html
+++ b/Taschenrechner app/index.html
@@ -5,6 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taschenrechner</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Taschenrechner</h1>
+    <table>
+      <tr>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>C</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>/</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>X</td>
+      </tr>
+      <tr>
+        <td>0</td>
+        <td>,</td>
+        <td>=</td>
+        <td>+</td>
+      </tr>
+    </table>
+  </body>
 </html>
