--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" text="text/css" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -172,19 +169,25 @@
         Viel Spaß beim Shoppen!
       </p>
     </div>
+    <div class="backlinks">
+      <p>
+        <a
+          href="http://www.webwiki.de/info/webwiki-buttons.html"
+          target="_blank"
+          >Webwiki</a
+        >
+        -
+        <a href="https://www.webinhalt.de/" target="_blank">Webinhalt</a>
+        -
+        <a href="http://www.suchnase.de/" target="_blank"
+          >Webverzeichnis Webkatalog suchnase.de</a
+        >
+      </p>
+    </div>
     <div class="socialMedia">
-      <a href="https://facebook.com" target="_Blank">
-        <i class="fas fa-facebook nav-icon"></i
-      ></a>
-      <a href="https://instagram.com" target="_Blank" class="nav-link"
-        ><i class="fab fa-instagram-square"></i
-      ></a>
-      <a href="https://facebook.com" target="_Blank" class="nav-link"
-        ><i class="fab fa-facebook"></i
-      ></a>
-      <a href="httpsr://twitter.com" target="_Blank" class="nav-link"
-        ><i class="fab fa-twitter"></i
-      ></a>
+      <a href="#" class="social-link"> <i class="fab fa-facebook icon"></i></a>
+      <a href="#" class="social-link"> <i class="fab fa-instagram icon"></i></a>
+      <a href="#" class="social-link"> <i class="fab fa-twitter icon"></i></a>
     </div>
   </body>
 </html>
