--- a/Thailanderleben HP/index.html
+++ b/Thailanderleben HP/index.html
@@ -30,9 +30,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a
-                href="https://www.thailanderleben.com/thailanderleben/reisennachthailand/"
-                target="_blank"
+              <a href="reisen nach thailand.html" target="_blank"
                 >Reisen nach Thailand</a
               >
             </li>
