--- a/Thailanderleben HP/reisen nach thailand.html
+++ b/Thailanderleben HP/reisen nach thailand.html
@@ -12,12 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins&display=swap"
-      rel="stylesheet"
-    />
     <title>Reisen nach Thailand</title>
   </head>
   <body>
@@ -35,6 +29,24 @@
         feiern. Seit gespannt auf tolle Bilder, Videos von Thailand auf
         Thailanderleben und folge mir auf Schritt und Tritt.
       </p>
+    </div>
+    <div class="amexbanner">
+      <a
+        href="https://www.financeads.net/tc.php?t=49902C14043647B"
+        target="_blank"
+        ><img
+          src="https://www.financeads.net/tb.php?t=49902V14043647B&amp;https=1"
+          alt="american express banner"
+          width="728"
+          height="90"
+      /></a>
+    </div>
+    <div class="ichliebethailand">
+      <p>Ich liebe Thailand</p>
+      <br />
+      <p class="thai">ผมรักเมืองไทย</p>
+      <br />
+      <p>pomm ragg müang thai</p>
     </div>
     <div class="socialMedia">
       <a href="#" class="social-link"> <i class="fab fa-facebook icon"></i></a>
