--- a/Thailanderleben HP/reisen nach thailand.html
+++ b/Thailanderleben HP/reisen nach thailand.html
@@ -48,6 +48,35 @@
       <br />
       <p>pomm ragg müang thai</p>
     </div>
+    <h2>Tool zum Reise planen</h2>
+    <div class="reiseTool">
+      <p>
+        Ich suche mir meine Hotels immer bei
+        <span class="agodatxtlink"
+          ><a
+            href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&amp;cid=1881190&amp;hl=de"
+            target="_blank"
+            title="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&amp;cid=1881190&amp;hl=de"
+            >Agoda.com</a
+          ></span
+        >! Ich habe bis jetzt immer gute Erfahrungen mit diesem Buchungsportal
+        gemacht und die Preise sind Top! Es gibt keine bösen Überraschungen,
+        dass das Hotel vor Ort anders aussieht wie auf den Bildern im Portal.
+        Man bekommt das, was man gebucht hat. Je öfter du ein Hotel buchst über
+        Agoda, desto wir der Rabatt bei der nächsten Buchung. Natürlich kannst
+        du auch andere
+        <span class="agodatxtlink"
+          ><a
+            href="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&amp;cid=1881190&amp;hl=de"
+            target="_blank"
+            title="https://www.agoda.com/partners/partnersearch.aspx?pcs=1&amp;cid=1881190&amp;hl=de"
+            >Buchungsportale</a
+          ></span
+        >
+        nutzen, um das für dich beste Angebot zu finden. Buche dir noch heute
+        dein Traumhotel
+      </p>
+    </div>
     <div class="socialMedia">
       <a href="#" class="social-link"> <i class="fab fa-facebook icon"></i></a>
       <a href="#" class="social-link"> <i class="fab fa-instagram icon"></i></a>
