agoda widget + badge eingefügt

--- a/Thailanderleben HP/reisen nach thailand.html
+++ b/Thailanderleben HP/reisen nach thailand.html
@@ -77,6 +77,39 @@
         dein Traumhotel
       </p>
     </div>
+    <div id="adgshp-1109735696"></div>
+    <script
+      type="text/javascript"
+      src="//cdn0.agoda.net/images/sherpa/js/sherpa_init1_08.min.js"
+    ></script>
+    <script type="text/javascript">
+      //<![CDATA[
+
+      var stg = new Object();
+      stg.crt = "1740076884622";
+      stg.version = "1.04";
+      stg.id = stg.name = "adgshp-1109735696";
+      stg.width = "100%";
+      stg.height = "10%";
+      stg.ReferenceKey = "wxpYRLCLGioBAaPndIcyng==";
+      stg.Layout = "Oneline";
+      stg.Language = "de-de";
+      stg.Cid = "1881190";
+      stg.DestinationName = "";
+      stg.OverideConf = false;
+      new AgdSherpa(stg).initialize();
+      //]]>
+    </script>
+    <div class="AgdBadge">
+      <a
+        href="https://www.agoda.com/partners/partnersearch.aspx?cid=1881190&amp;pcs=8"
+        target="_blank"
+        ><img
+          src="//sherpa.agoda.com/Badge/GetBadge?badgetype=1&amp;refkey=ezn7PtVIwn3shu5eQo9v1w%3D%3D"
+          alt="agogoda verfied affiliate"
+      /></a>
+    </div>
+
     <div class="socialMedia">
       <a href="#" class="social-link"> <i class="fab fa-facebook icon"></i></a>
       <a href="#" class="social-link"> <i class="fab fa-instagram icon"></i></a>
