--- a/Thailanderleben HP/index2.html
+++ b/Thailanderleben HP/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" text="text/css" href="rsnt.css" />
+    <link rel="stylesheet" text="text/css" href="style2.css" />
     <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
