--- a/Taschenrechner/taschenrechner.html
+++ b/Taschenrechner/taschenrechner.html
@@ -9,31 +9,31 @@
     <script src="taschenrechner.js" defer></script>
   </head>
   <body>
-    <div id="tasechenrechner">
+    <div id="taschenrechner">
       <div id="anzeige">
         <div id="rechenweg_anzeige"></div>
         <input type="text" id="eingabefeld" />
-        <button class="taste">(</button>
-        <button class="taste">)</button>
-        <button class="taste">ENTF</button>
-        <button class="taste">AC</button>
-        <button class="taste">7</button>
-        <button class="taste">8</button>
-        <button class="taste">9</button>
-        <button class="taste">/</button>
-        <button class="taste">4</button>
-        <button class="taste">5</button>
-        <button class="taste">6</button>
-        <button class="taste">*</button>
-        <button class="taste">1</button>
-        <button class="taste">2</button>
-        <button class="taste">3</button>
-        <button class="taste">-</button>
-        <button class="taste">0</button>
-        <button class="taste">,</button>
-        <button class="taste">+</button>
-        <button class="taste" id="rechnen-button">=</button>
       </div>
+      <button class="taste">(</button>
+      <button class="taste">)</button>
+      <button class="taste">ENTF</button>
+      <button class="taste">AC</button>
+      <button class="taste">7</button>
+      <button class="taste">8</button>
+      <button class="taste">9</button>
+      <button class="taste">/</button>
+      <button class="taste">4</button>
+      <button class="taste">5</button>
+      <button class="taste">6</button>
+      <button class="taste">*</button>
+      <button class="taste">1</button>
+      <button class="taste">2</button>
+      <button class="taste">3</button>
+      <button class="taste">-</button>
+      <button class="taste">0</button>
+      <button class="taste">,</button>
+      <button class="taste">+</button>
+      <button class="taste" id="rechnen-button">=</button>
     </div>
   </body>
 </html>
