--- a/Taschenrechner/taschenrechner.html
+++ b/Taschenrechner/taschenrechner.html
@@ -11,7 +11,7 @@
   <body>
     <div id="taschenrechner">
       <div id="anzeige">
-        <div id="rechenweg_anzeige"></div>
+        <div id="rechenweg-anzeige"></div>
         <input type="text" id="eingabefeld" />
       </div>
       <button class="taste">(</button>
