--- a/Taschenrechner/taschenrechner.html
+++ b/Taschenrechner/taschenrechner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taschenrechner mit Javascript</title>
+    <title>Taschenrechner mit JavaScript</title>
     <link rel="stylesheet" href="taschenrechner.css" />
     <script src="taschenrechner.js" defer></script>
   </head>
