--- a/HTML Table/index.html
+++ b/HTML Table/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table>
-      <thead class="content">
+    <table class="content">
+      <thead>
         <tr>
           <th>ID</th>
           <th>Name</th>
