--- a/Grundlagen_Animation/Animation (Mario)/index.html
+++ b/Grundlagen_Animation/Animation (Mario)/index.html
@@ -8,7 +8,7 @@
     <title>CSS Animation</title>
   </head>
   <body>
-    <div class="page loader">
+    <div class="page-loader">
       <div class="cube cube-1"></div>
       <div class="cube cube-2"></div>
       <div class="cube cube-3"></div>
