--- a/Grundlagen_Animation/Clip Path/index.html
+++ b/Grundlagen_Animation/Clip Path/index.html
@@ -7,5 +7,15 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CSS Clip Path</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <h1>Überschrift</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut quibusdam,
+        veritatis quis soluta provident deserunt totam, iste rerum quidem
+        beatae, doloribus a impedit nihil obcaecati illum consequuntur error
+        animi cumque.
+      </p>
+    </div>
+  </body>
 </html>
