--- a/JavaScript Tutorial/index.html
+++ b/JavaScript Tutorial/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <input type="text" id="input" value=""/>
+    <button id="click-button">Lick mich!</button>
+    <div id="output"></div>
     <script src="app.js"></script>
     </script>
   </body>
