Event button erstellt

--- a/JavaScript Tutorial/index.html
+++ b/JavaScript Tutorial/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input type="text" id="input" value=""/>
-    <button id="click-button">Lick mich!</button>
+    <button id="click-button">Klick mich!</button>
     <div id="output"></div>
     <script src="app.js"></script>
     </script>
