Html Objekte erstellt

--- a/JavaScript Tutorial/HTML mit JavaScript ausgeben/index.html
+++ b/JavaScript Tutorial/HTML mit JavaScript ausgeben/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>HTML mit JavaScript generrieren</h1>
     <hr />
-    <ul clas="liste">
+    <ul class="liste">
       <li>
         <b> HTML Objekte erzeugen und hinzufügen</b><br />
         sehr effiziente und umfangreiche Methode<br /><br />
