--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Programmieren mit Mario</title>
+    <meta
+      name="description"
+      content="Web Entwicklung einfach starten - Alles rundum Webentwicklung, Webdesigen und Webanwendung"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="page-logo">programmierenmitMario</div>
+      <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="uses.html">Uses</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Web Entwicklung // einfach starten</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione veniam
+        adipisci eveniet sint ipsa mollitia! Odio neque est, suscipit cupiditate
+        laudantium veritatis sapiente aspernatur minus, debitis animi nam
+        nostrum? Voluptate!
+      </p>
+    </main>
+    <footer></footer>
+    <script src="js/app.js"></script>
+  </body>
 </html>
