--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -18,6 +18,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="uses.html">Uses</a></li>
+          <li><span id="invertButton">[Invert]</span></li>
         </ul>
       </nav>
     </header>
