--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <main>
-      <h1>Web Entwicklung // einfach starten</h1>
+      <h1>Web Entwicklung <span class="text-grey">// einfach starten</span></h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione veniam
         adipisci eveniet sint ipsa mollitia! Odio neque est, suscipit cupiditate
