--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -13,12 +13,14 @@
   </head>
   <body>
     <header>
-      <div id="page-logo">programmierenmitMario</div>
+      <div id="page-logo" class="text-green">
+        programmierenmitMario<span class="text-white">();</span>
+      </div>
       <nav>
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="uses.html">Uses</a></li>
-          <li><span id="invertButton">[Invert]</span></li>
+          <li><a href="about.html" class="link-blue">About</a></li>
+          <li><a href="uses.html" class="link-blue">Uses</a></li>
+          <li><span id="invertButton" class="link-purple">[Invert]</span></li>
         </ul>
       </nav>
     </header>
