--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class="invert">
     <header>
       <div id="page-logo" class="text-green">
         programmierenmitMario<span class="text-white">();</span>
