--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -11,10 +11,15 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="invert">
+  <body>
+    <!--<body class="invert">-->
     <header>
-      <div id="page-logo" class="text-green">
-        programmierenmitMario<span class="text-white">();</span>
+      <div id="page-logo">
+        <a
+          href="http://127.0.0.1:5500/Website%20erstellen%20mit%20Mario/index.html"
+          class="text-green"
+          >programmierenmitMario<span class="text-white">();</span></a
+        >
       </div>
       <nav>
         <ul>
