--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -38,7 +38,15 @@
         nostrum? Voluptate!
       </p>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="text-grey">
+        &copy; 2022 by Satch Production. All rights reserved.
+      </div>
+      <ul>
+        <li><a href="impressum.html">[Impressum]</a></li>
+        <li><a href="datenschutz.html">[Datenschutz]</a></li>
+      </ul>
+    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
