--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -40,11 +40,12 @@
     </main>
     <footer>
       <div class="text-grey">
-        &copy; 2022 by Satch Production. All rights reserved.
+        &copy; <span id="currentYear"></span> by Satch Production. All rights
+        reserved.
       </div>
       <ul>
-        <li><a href="impressum.html">[Impressum]</a></li>
-        <li><a href="datenschutz.html">[Datenschutz]</a></li>
+        <li><a href="impressum.html" class="link-grey">[Impressum]</a></li>
+        <li><a href="datenschutz.html" class="link-grey">[Datenschutz]</a></li>
       </ul>
     </footer>
     <script src="js/app.js"></script>
