--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -15,9 +15,7 @@
     <!--<body class="invert">-->
     <header>
       <div id="page-logo">
-        <a
-          href="http://127.0.0.1:5500/Website%20erstellen%20mit%20Mario/index.html"
-          class="text-green"
+        <a href="/" class="text-green"
           >programmierenmitMario<span class="text-white">();</span></a
         >
       </div>
@@ -36,6 +34,12 @@
         adipisci eveniet sint ipsa mollitia! Odio neque est, suscipit cupiditate
         laudantium veritatis sapiente aspernatur minus, debitis animi nam
         nostrum? Voluptate!
+        <a
+          href="https://www.youtube.com/c/Thailanderleben/"
+          target="_blank"
+          class="link-red"
+          >[Jetzt anschauen]</a
+        >
       </p>
     </main>
     <footer>
