--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -15,13 +15,13 @@
     <!--<body class="invert">-->
     <header>
       <div id="page-logo">
-        <a href="/" class="text-green"
+        <a href="index.html" class="text-green"
           >programmierenmitMario<span class="text-white">();</span></a
         >
       </div>
       <nav>
         <ul>
-          <li><a href="about.html" class="link-blue">About</a></li>
+          <li><a href="aboutme.html" class="link-blue">About</a></li>
           <li><a href="uses.html" class="link-blue">Uses</a></li>
           <li><span id="invertButton" class="link-purple">[Invert]</span></li>
         </ul>
@@ -40,6 +40,13 @@
           class="link-red"
           >[Jetzt anschauen]</a
         >
+      </p>
+      <h2>Wer bin ich?</h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
+        quidem dolor incidunt totam! Voluptatibus deleniti harum pariatur! In
+        quae, aut repellendus vel laboriosam dolor alias voluptas qui inventore
+        magnam vero!
       </p>
     </main>
     <footer>
