--- a/Website erstellen mit Mario/impressum.html
+++ b/Website erstellen mit Mario/impressum.html
@@ -15,7 +15,7 @@
     <!--<body class="invert">-->
     <header>
       <div id="page-logo">
-        <a href="/" class="text-green"
+        <a href="index.html" class="text-green"
           >programmierenmitMario<span class="text-white">();</span></a
         >
       </div>
